--- a/development/package.json
+++ b/development/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ngx-cache-layer",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
     "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ngx-cache-layer -d docs --hideGenerator",
+    "docs:build": "compodoc -p tsconfig.json -n ngx-cache-layer -d ../docs --hideGenerator",
     "docs:serve": "npm run docs:build -- -s",
     "docs:watch": "npm run docs:build -- -s -w",
     "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
