--- a/development/package.json
+++ b/development/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-cache-layer",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://gitlab.youvolio.com/open-source/ngx-cache-layer.git"
+    "url": "https://github.com/Stradivario/ngx-cache-layer.git"
   },
   "author": {
     "name": "Kristian Tachev(Stradivario)",
