--- a/development/src/package.json
+++ b/development/src/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngx-cache-layer",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "repository": {
     "type": "git",
-    "url": "http://gitlab.youvolio.com/open-source/ngx-cache-layer.git"
+    "url": "https://github.com/Stradivario/ngx-cache-layer.git"
   },
   "author": {
     "name": "Kristian Tachev(Stradivario)",
