--- a/development/package.json
+++ b/development/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-cache-layer",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -56,7 +56,7 @@
     "rxjs": "^5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0",
+    "typescript": "^2.7.1",
     "zone.js": "^0.8.4"
   },
   "engines": {
