--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-cache-layer",
+  "name": "@rxdi/cache",
   "version": "2.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
