--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "module": "amd",
+    "module": "es2015",
     "target": "es5",
     "baseUrl": ".",
     "stripInternal": true,
