--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "deploy": "npm version patch && npm publish --update-readme --access public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Stradivario/ngx-cache-layer.git"
